style(darkmode): fix bad behavior of background color on dark mode

--- a/src/components/FilterBar/styles.scss
+++ b/src/components/FilterBar/styles.scss
@@ -3,11 +3,13 @@
 
 .select-content {
   @include themify($themes) {
-    background: themed('backgroundColor');
+    background: themed('elementsColor');
     color: themed('textColor');
   }
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
   padding: 1rem;
   margin-bottom: 2rem;
+  border: none;
+
 }
